k8s-multi-app/k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-backend1
  labels:
    app: app-backend1

spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-backend1
  template:
    metadata:
      labels:
        app: app-backend1
    spec:
      restartPolicy: Always
      containers:
      - name: single-pod
        image: bureck/k8s-single-pod:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 60004
