k8s-multi-app/k8s/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend1
  labels:
    app: app-frontend1

spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-frontend1
  template:
    metadata:
      labels:
        app: app-frontend1
    spec:
      restartPolicy: Always
      containers:
      - name: frontend-app
        image: bureck/single-html:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
