k8s-multi-app/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: app-backend-svc

spec:
  selector:
    app: app-backend1
  type: NodePort
  ports:
    - protocol: TCP
      port: 60004
      targetPort: 60004
