k8s-multi-app/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: app-frontend-svc

spec:
  selector:
    app: app-frontend1
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
