k8s-multi-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: app.local
      http:
        paths:

          # frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-frontend-svc
                port:
                  number: 80

          # backend API
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app-backend-svc
                port:
                  number: 60004
